--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,6 +29,7 @@
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2",
+    "tesseract.js": "^6.0.1",
     "yup": "^1.7.0"
   },
   "devDependencies": {
